force-app/main/default/objects/Lead_Score__c/Lead_Score__c.object-meta.xml
<CustomObject>
    <label>Lead Score</label>
    <pluralLabel>Lead Scores</pluralLabel>
    <description>Lead Score</description>
    <nameField>
        <label>Lead Score Name</label>
        <type>AutoNumber</type>
        <displayFormat>LSC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>