force-app/main/default/objects/Lead_Score__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Engagement Score</description>
</CustomField>