force-app/main/default/objects/Lead_Score__c/fields/Firmographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Firmographic_Score__c</fullName>
    <label>Firmographic Score</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Firmographic Score</description>
</CustomField>