force-app/main/default/objects/Lead_Score__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Scores</relationshipLabel>
    <relationshipName>Lead_Scores</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lead</description>
</CustomField>