force-app/main/default/objects/Lead_Score__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <type>Text</type>
    <length>20</length>
    <description>Model Version</description>
</CustomField>