force-app/main/default/objects/Lead_Score__c/fields/Scored_On__c.field-meta.xml
<CustomField>
    <fullName>Scored_On__c</fullName>
    <label>Scored On</label>
    <type>DateTime</type>
    <description>Scored On</description>
</CustomField>