force-app/main/default/objects/Lead_Score__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Total Score</description>
</CustomField>